src/test/resources/frontendReference/invalid/syntaxErr/basic/bgnErr.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 11:0 -- missing 'begin' at 'bgn'
Syntactic Error at 11:4 -- mismatched input 'skip' expecting {'[', '='}
2 parser error(s) detected, no further compilation attempted.
